# yo-iterative-review

./: .gitignore  .mcp.json  CHANGELOG.md  README.html  README.md  end.js  iterative-review-plugin-design.md  package-lock.json  package.json  start.js  update-plugin.md
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: po-docs-release.yml
agents/: dev-review-manager.md  dev-supervisor.md  dev-test-manager.md  frontend-vue.md  implementer.md  proofreader.md  reviewer.md  tester.md
command_back/: test-loop.md
commands/: dev-sm.md  dev-xxl.md  develop.md  iterative.md  orchestrate.md  start.md  test-loop.md
docs/: claude-code-beginner-guide.md  hooks-reference.md  index.md  iterative-review-approach.md  loop-engineering.md  orchestration-methodology.md
docs/design/: agents-design.md
hooks/: hooks.json
hooks/simple/: coding-reminder.js
iterative-runner/: develop-plan.md  develop.ts  env.ts  iterative.ts  package-lock.json  package.json  readme-iterative.md  readme-test-loop.md  readme.md  test-loop.ts  tsconfig.json
iterative-runner/lib/: call-model.mjs  call-model.ts  (+5 more)
lib/po-docs-db/: README.md  pyproject.toml
lib/po-docs-db/src/po_docs_db/: __init__.py  database.py  db.py  schemas.py  tokenizer.py
lib/po-docs-db/tests/: test_basic.py
mcp-server/: check-deps.js  check-deps.mjs  index.ts
readme/: skills.md
src/: __init__.py  snowflake.py  test_snowflake.py
tests/: test_mysql_to_oracle.py
work/: sqlite-inverted-index.md
work_flow/: 1.md  yo_docs_mcp_design.md  yo_docs_mcp_plan.md
(+75 files in other folders)
